:sparkles: Add KONAMI code and button navigation

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         </div>
         <div class="left-container__controllers">
           <div class="controllers__d-pad">
-            <div class="d-pad__cell top"></div>
-            <div class="d-pad__cell left"></div>
-            <div class="d-pad__cell middle"></div>
-            <div class="d-pad__cell right"></div>
-            <div class="d-pad__cell bottom"></div>
+            <div data-key="t" class="d-pad__cell top"></div>
+            <div data-key="l" class="d-pad__cell left"></div>
+            <div data-key="m" class="d-pad__cell middle"></div>
+            <div data-key="r" class="d-pad__cell right"></div>
+            <div data-key="b" class="d-pad__cell bottom"></div>
           </div>
           <div class="controllers__buttons">
             <div class="buttons__button">B</div>
@@ -100,6 +100,7 @@
     </div>
   </div>
 </div>
+<script src="script.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
