:hammer: refacto entire code

--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
         </div>
         <div class="left-container__controllers">
           <div class="controllers__d-pad">
-            <div data-key="t" class="d-pad__cell top"></div>
-            <div data-key="l" class="d-pad__cell left"></div>
-            <div data-key="m" class="d-pad__cell middle"></div>
-            <div data-key="r" class="d-pad__cell right"></div>
-            <div data-key="b" class="d-pad__cell bottom"></div>
+            <div data-key="t" class="btn d-pad__cell top"></div>
+            <div data-key="l" class="btn d-pad__cell left"></div>
+            <div data-key="m" class="btn d-pad__cell middle"></div>
+            <div data-key="r" class="btn d-pad__cell right"></div>
+            <div data-key="b" class="btn d-pad__cell bottom"></div>
           </div>
           <div class="controllers__buttons">
-            <div class="buttons__button">B</div>
-            <div class="buttons__button">A</div>
+            <div data-key="B" class="btn buttons__button">B</div>
+            <div data-key="A" class="btn buttons__button">A</div>
           </div>
         </div>
       </div>
